Bug 1577731 - Place the granted permissions icon on the right for RTL and add dark mode support for it. r=nhnt11
Differential Revision: https://phabricator.services.mozilla.com/D44126

UltraBlame original commit: 4a0e19c276b3cf7094ca8e0dc791a6f6bda04ea6

--- a/browser/themes/shared/controlcenter/panel.inc.css
+++ b/browser/themes/shared/controlcenter/panel.inc.css
@@ -1096,6 +1096,47 @@ no
 -
 repeat
 ;
+-
+moz
+-
+context
+-
+properties
+:
+fill
+;
+fill
+:
+currentColor
+;
+}
+#
+identity
+-
+popup
+-
+permissions
+-
+header
+:
+-
+moz
+-
+locale
+-
+dir
+(
+rtl
+)
+{
+background
+-
+position
+-
+x
+:
+right
+;
 }
 #
 identity
